# paimon-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml
.ultra/: config.json  constitution.md
.ultra/changes/: .gitkeep
.ultra/changes/task-1/: proposal.md
.ultra/changes/task-2/: proposal.md
.ultra/changes/task-3/: proposal.md
.ultra/context-archive/: session-index.json
.ultra/docs/: feature-status.json  implementation-gap-analysis.md
.ultra/docs/decisions/: ADR-001-tech-stack.md
.ultra/docs/research/: README.md  metadata.json  performance-design-2024-12-13.md  risk-assessment-2024-12-13.md  security-architecture-2024-12-13.md  tech-validation-2024-12-13.md
.ultra/specs/: architecture.md  product.md
.ultra/specs/api-contracts/: .gitkeep
.ultra/specs/data-models/: .gitkeep
.ultra/tasks/: tasks.json
.ultra/thinking-sessions/: README.md
contract-support/: AssetController.sol  IPNGYContracts.sol  MockAssetScheduler.sol  MockOTCManager.sol  MockOracleAdpter.sol  MockSwapHelper.sol  PNGYTypes.sol  PNGYVault.sol  RedemptionManager.sol
docs/backend/: 00-overview.md  01-event-listener.md  02-rebalance-engine.md  03-risk-control.md  04-approval-workflow.md  05-api-specification.md  06-database-design.md  07-permission-management.md  08-deployment.md  CONTRACT-PLAN-DIFF.md  PROJECT-AUDIT-REPORT.md
migrations/: env.py
migrations/versions/: 20241213_0900_001_init_timescaledb.py  20241215_1000_002_create_business_tables.py  20241217_1000_003_add_redemption_v2_fields.py
scripts/: celery_beat.sh  celery_flower.sh  celery_worker.sh
src/app/: __init__.py  main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py
src/app/core/: celery_app.py  config.py
src/app/infrastructure/blockchain/: __init__.py  client.py  contracts.py  events.py  transaction.py
src/app/infrastructure/database/: __init__.py  session.py
src/app/models/: __init__.py  approval.py  asset.py  audit.py  base.py  rebalance.py  redemption.py  risk.py  timeseries.py  transaction.py
src/app/repositories/: __init__.py  approval.py  asset.py  audit_log.py  base.py  rebalance.py  redemption.py  risk_event.py  snapshot.py  transaction.py
src/app/services/approval/: __init__.py  executor.py  schemas.py  workflow.py
src/app/services/audit/: __init__.py  logger.py  schemas.py
src/app/services/auth/: __init__.py  dependencies.py  jwt_service.py  wallet_auth.py
src/app/services/data_sync/: __init__.py  sync_service.py
src/app/services/event_handlers/: __init__.py  dispatcher.py  handlers.py
src/app/services/event_listener/: __init__.py  checkpoint.py  deduplicator.py  listener.py
src/app/services/forecasting/: __init__.py  forecaster.py  schemas.py
src/app/services/fund/: __init__.py  metrics.py  service.py
src/app/services/health/: __init__.py  checker.py
src/app/services/metrics/: __init__.py  collector.py  tracing.py
src/app/services/rbac/: __init__.py  definitions.py  dependencies.py  onchain_roles.py  rbac_service.py
src/app/services/rebalance/: __init__.py  executor.py  executor_schemas.py  schemas.py  strategy.py  triggers.py
src/app/services/redemption/: __init__.py  schemas.py  service.py
src/app/services/reports/: __init__.py  generator.py  schemas.py
src/app/services/risk/: __init__.py  alert_router.py  monitor.py  notification_schemas.py  notification_service.py  schemas.py
src/app/tasks/: __init__.py  approval_tasks.py  base.py  event_tasks.py  monitoring_tasks.py  notification_tasks.py  rebalance_tasks.py
tests/: conftest.py
tests/api/: test_reports_api.py
tests/performance/: test_performance.py
tests/security/: test_security_audit.py
tests/unit/: test_app.py  test_approval_api.py  test_approval_workflow.py  test_audit.py  test_auth.py  test_blockchain.py  test_config.py  test_data_sync.py  test_event_handlers.py  test_event_listener.py  test_fund_api.py  test_health.py  test_liquidity_forecasting.py  test_metrics.py  test_models.py  test_rbac.py  test_rebalance_api.py  test_rebalance_executor.py  test_rebalance_strategy.py  test_rebalance_triggers.py  test_redemption.py  test_reports.py  test_risk_alerts.py  test_risk_api.py  test_risk_monitoring.py  test_security.py  test_timeseries.py  test_websocket.py
(+18 files in other folders)
